# german_newspaper_crawler

./: LICENSE  README.md  pyproject.toml  requirements.txt
configs/: config.yaml
lib/common/: config_handler.py  logging.py  mongodb.py  object_model.py  parallel_fetcher.py  pos_tagging.py  web_requests.py
lib/domain/: taz.py
scr/: german_newspapaer_crawler.py  german_newspaper_crawler.py  scheduler.py
